--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "backend test",
+  "name": "backendtest",
   "version": "1.0.0",
   "description": "just test",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && node ./build/server",
-    "clean": "rimraf build",
-    "build": "npm run clean && webpack --config webpack.server.config.js --debug --progress --profile --colors"
+    "start": "npm run build && node ./build/server.js",
+    "clean": "rimraf ./build",
+    "build": "npm run clean && webpack --config ./webpack.server.config.js --debug --progress --profile --colors"
   },
   "author": "Anton Nemtsev <thesilentimp@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
