--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "express": "^4.16.2",
+    "pug": "^2.0.0-rc.4",
+    "pug-loader": "^2.3.0",
+    "query-string": "^5.0.1",
+    "raw-loader": "^0.5.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "restify": "^4.0.2",
     "rimraf": "^2.6.2",
     "webpack": "^3.6.0"
