--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,25 @@
 {
   "presets": [
     ["env", {
-      "targets": {
-        "node": "current"
-      },
-      "debug": true
+        "targets": {
+          "node": "current",
+          "browsers": ["> 3%", "ie 11"]
+        },
+        "debug": true
     }],
     "react",
     "stage-0"
-  ]
+  ],
+  "plugins": [
+    "transform-decorators-legacy",
+    "syntax-dynamic-import",
+  ],
+  "env": {
+    "test": {
+      "plugins": [
+        "transform-decorators-legacy",
+        "transform-es2015-modules-commonjs"
+      ]
+    }
+  }
 }
