--- a/package.json
+++ b/package.json
@@ -4,21 +4,32 @@
   "description": "just test",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && node ./build/server.js",
+    "start": "node ./build/server.js",
     "clean": "rimraf ./build",
-    "build": "npm run clean && webpack --config ./webpack.server.config.js --debug --progress --profile --colors"
+    "build": "npm-run-all build:*",
+    "build:client": "webpack --config ./webpack.config.js --env=development --debug --progress --profile --colors",
+    "build:server": "webpack --config ./webpack.server.config.js --env=development --debug --progress --profile --colors"
   },
   "author": "Anton Nemtsev <thesilentimp@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "assets-webpack-plugin": "^3.5.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "copy-webpack-plugin": "^4.2.3",
+    "css-loader": "^0.28.7",
     "express": "^4.16.2",
+    "isomorphic-style-loader": "^4.0.0",
+    "json-loader": "^0.5.7",
+    "npm-run-all": "^4.1.2",
+    "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
     "query-string": "^5.0.1",
@@ -27,6 +38,8 @@
     "react-dom": "^16.2.0",
     "restify": "^4.0.2",
     "rimraf": "^2.6.2",
+    "script-ext-html-webpack-plugin": "^1.8.8",
+    "style-loader": "^0.19.0",
     "webpack": "^3.6.0"
   }
 }
