--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "Anton Nemtsev <thesilentimp@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@plasma-platform/tm-css": "^1.0.10",
     "assets-webpack-plugin": "^3.5.1",
+    "autoprefixer": "^7.2.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -26,20 +28,46 @@
     "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
+    "file-loader": "^1.1.5",
+    "fs": "0.0.1-security",
+    "history": "^4.7.2",
+    "i18next": "^10.2.1",
+    "i18next-browser-languagedetector": "^2.1.0",
+    "i18next-localstorage-cache": "^1.1.1",
+    "i18next-sprintf-postprocessor": "^0.2.2",
+    "i18next-xhr-backend": "^1.5.0",
     "isomorphic-style-loader": "^4.0.0",
     "json-loader": "^0.5.7",
     "npm-run-all": "^4.1.2",
+    "postcss-conditionals": "^2.1.0",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.9",
+    "postcss-mixins": "^6.2.0",
+    "postcss-nested": "^2.1.2",
+    "postcss-simple-vars": "^4.1.0",
     "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
     "query-string": "^5.0.1",
     "raw-loader": "^0.5.1",
     "react": "^16.2.0",
+    "react-document-title": "^2.0.3",
     "react-dom": "^16.2.0",
+    "react-hot-loader": "^3.1.3",
+    "react-i18next": "^7.1.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-form": "^7.2.0",
+    "redux-thunk": "^2.2.0",
+    "reset.css": "^2.0.2",
     "restify": "^4.0.2",
     "rimraf": "^2.6.2",
     "script-ext-html-webpack-plugin": "^1.8.8",
     "style-loader": "^0.19.0",
-    "webpack": "^3.6.0"
+    "svg-sprite-loader": "^3.4.1",
+    "svgo": "^1.0.3",
+    "svgo-loader": "^2.1.0",
+    "webpack": "^3.6.0",
+    "webpack-merge": "^4.1.1"
   }
 }
