--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
           "node": "current",
           "browsers": ["> 3%", "ie 11"]
         },
-        "debug": true
+        "debug": true,
     }],
     "react",
     "stage-0"
