--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^0.28.7",
+    "eslint-plugin-react": "^7.5.1",
     "express": "^4.16.2",
     "file-loader": "^1.1.5",
     "fs": "0.0.1-security",
@@ -64,10 +65,23 @@
     "rimraf": "^2.6.2",
     "script-ext-html-webpack-plugin": "^1.8.8",
     "style-loader": "^0.19.0",
+    "stylelint-webpack-plugin": "^0.9.0",
     "svg-sprite-loader": "^3.4.1",
     "svgo": "^1.0.3",
     "svgo-loader": "^2.1.0",
     "webpack": "^3.6.0",
     "webpack-merge": "^4.1.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.0.3",
+    "eslint": "^4.12.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jest": "^21.4.1",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "stylelint": "^8.3.1"
   }
 }
