--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "clean": "rimraf build public",
     "start": "export NODE_ENV=local && webpack-dev-server --hot --inline",
     "build": "npm run clean && export NODE_ENV=production && npm-run-all build:production:*",
-    "build:production:client": "webpack -p --config ./webpack.config.js --env=production --progress --colors --display-reasons --verbose --display-chunks",
-    "build:production:server": "webpack -p --config ./webpack.server.config.js --env=production --progress --colors --display-reasons --verbose --display-chunks",
+    "build:production:client": "webpack --config ./webpack.config.js --env=production --progress --colors --display-reasons --verbose --display-chunks",
+    "build:production:server": "webpack --config ./webpack.server.config.js --env=production --progress --colors --display-reasons --verbose --display-chunks",
     "build:dev": "npm run clean && export NODE_ENV=dev && npm-run-all build:dev:*",
     "build:dev:client": "webpack --config ./webpack.config.js --env=dev --progress --debug --colors --display-reasons --verbose --display-chunks",
     "build:dev:server": "webpack --config ./webpack.server.config.js --env=dev --progress --debug --colors --display-reasons --verbose --display-chunks",
@@ -39,7 +39,7 @@
   "author": "Anton Nemtsev <thesilentimp@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@plasma-platform/plasma-quark": "3.0.18",
+    "@plasma-platform/plasma-quark": "3.0.19",
     "@plasma-platform/tm-css": "^1.0.10",
     "@plasma-platform/tm-message-hook": "^2.0.11",
     "assets-webpack-plugin": "^3.5.1",
@@ -53,6 +53,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "browser-env": "2.0.31",
     "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^0.28.7",
     "eslint-plugin-react": "^7.5.1",
