--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "clean": "rimraf build public",
     "start": "export NODE_ENV=local && webpack-dev-server --hot --inline",
     "build": "npm run clean && export NODE_ENV=production && npm-run-all build:production:*",
-    "build:production:client": "webpack --config ./webpack.config.js --env=production --progress --colors --display-reasons --verbose --display-chunks",
-    "build:production:server": "webpack --config ./webpack.server.config.js --env=production --progress --colors --display-reasons --verbose --display-chunks",
+    "build:production:client": "webpack -p --config ./webpack.config.js --env=production",
+    "build:production:server": "webpack -p --config ./webpack.server.config.js --env=production",
     "build:dev": "npm run clean && export NODE_ENV=dev && npm-run-all build:dev:*",
-    "build:dev:client": "webpack --config ./webpack.config.js --env=dev --progress --debug --colors --display-reasons --verbose --display-chunks",
-    "build:dev:server": "webpack --config ./webpack.server.config.js --env=dev --progress --debug --colors --display-reasons --verbose --display-chunks",
+    "build:dev:client": "webpack --config ./webpack.config.js --env=dev",
+    "build:dev:server": "webpack --config ./webpack.server.config.js --env=dev",
     "build:local": "npm run clean && export NODE_ENV=local && npm-run-all build:local:*",
     "build:local:client": "webpack --config ./webpack.config.js --env=local --progress --debug --colors --display-reasons --verbose --display-chunks",
     "build:local:server": "webpack --config ./webpack.server.config.js --env=local --progress --debug --colors --display-reasons --verbose --display-chunks",
@@ -22,7 +22,6 @@
     "lint": "npm-run-all lint:*",
     "lint:js": "eslint ./src/** --ext .jsx,.js --color -f stylish --fix",
     "lint:css": "stylelint './src/**/*.pcss' --color -r -f verbose --fix",
-    "lint:doc": "documentation lint src/**/*",
     "precommit": "git add . -A && lint-staged",
     "commitmsg": "commit-msg ${GIT_PARAMS}"
   },
@@ -39,7 +38,8 @@
   "author": "Anton Nemtsev <thesilentimp@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@plasma-platform/plasma-quark": "3.0.19",
+    "@plasma-platform/plasma-quark": "3.0.30",
+    "@plasma-platform/quark-library": "0.1.78",
     "@plasma-platform/tm-css": "^1.0.10",
     "@plasma-platform/tm-message-hook": "^2.0.11",
     "assets-webpack-plugin": "^3.5.1",
@@ -53,7 +53,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "browser-env": "2.0.31",
+    "browser-env": "^3.2.4",
     "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^0.28.7",
     "eslint-plugin-react": "^7.5.1",
@@ -89,6 +89,7 @@
     "react-hot-loader": "^3.1.3",
     "react-i18next": "^7.1.1",
     "react-redux": "^5.0.6",
+    "react-trigger-change": "^1.0.2",
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
     "redux-thunk": "^2.2.0",
