--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "backendtest",
-  "version": "1.0.0",
-  "description": "just test",
+  "name": "template-vendors",
+  "version": "1.1.0",
+  "description": "TemplateMonster Vendors",
   "main": "index.js",
   "scripts": {
     "clean": "rimraf build public",
-    "start": "export NODE_ENV=local && webpack-dev-server --hot --inline",
+    "start": "npm run build && node ./build/runner.js",
     "build": "npm run clean && export NODE_ENV=production && npm-run-all build:production:*",
     "build:production:client": "webpack -p --config ./webpack.config.js --env=production",
     "build:production:server": "webpack -p --config ./webpack.server.config.js --env=production",
@@ -13,7 +13,7 @@
     "build:dev:client": "webpack --config ./webpack.config.js --env=dev",
     "build:dev:server": "webpack --config ./webpack.server.config.js --env=dev",
     "build:local": "npm run clean && export NODE_ENV=local && npm-run-all build:local:*",
-    "build:local:client": "webpack --config ./webpack.config.js --env=local --progress --debug --colors --display-reasons --verbose --display-chunks",
+    "build:local:client": "webpack --watch --config ./webpack.config.js --env=local --progress --debug --colors --display-reasons --verbose --display-chunks",
     "build:local:server": "webpack --config ./webpack.server.config.js --env=local --progress --debug --colors --display-reasons --verbose --display-chunks",
     "build:doc": "documentation build src/*.js* -o public -f html",
     "test": "export NODE_ENV=test && jest --no-cache",
@@ -35,13 +35,28 @@
       "git add"
     ]
   },
-  "author": "Anton Nemtsev <thesilentimp@gmail.com>",
+  "contributors": [
+    {
+      "name": "Andrii Balaniuk",
+      "email": "andreyb@templatemonster.me"
+    },
+    {
+      "name": "Vadym Shymko",
+      "email": "vadimsh@templatemonster.me"
+    },
+    {
+      "name": "Anton Nemtsev",
+      "email": "thesilentimp@gmail.com",
+      "url": "http://frontender.info/"
+    }
+  ],
   "license": "ISC",
   "dependencies": {
-    "@plasma-platform/plasma-quark": "3.0.33",
+    "@plasma-platform/plasma-quark": "^3.0.30",
     "@plasma-platform/quark-library": "0.1.78",
     "@plasma-platform/tm-css": "^1.0.10",
     "@plasma-platform/tm-message-hook": "^2.0.11",
+    "@plasma-platform/tm-service-vendors": "^1.0.6",
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^7.2.1",
     "babel-cli": "^6.26.0",
@@ -55,10 +70,12 @@
     "babel-preset-stage-0": "^6.24.1",
     "browser-env": "^3.2.4",
     "classnames": "^2.2.5",
+    "compression": "^1.7.1",
     "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^0.28.7",
     "eslint-plugin-react": "^7.5.1",
     "express": "^4.16.2",
+    "express-cache-headers": "^0.1.3",
     "fibers": "^2.0.0",
     "fs": "0.0.1-security",
     "history": "^4.7.2",
@@ -73,6 +90,7 @@
     "isomorphic-style-loader": "^4.0.0",
     "json-loader": "^0.5.7",
     "lint-staged": "^6.0.0",
+    "normalizr": "^3.2.4",
     "npm-run-all": "^4.1.2",
     "postcss-conditionals": "^2.1.0",
     "postcss-import": "^11.0.0",
