--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "build:dev:client": "webpack --config ./webpack.config.js --env=dev",
     "build:dev:server": "webpack --config ./webpack.server.config.js --env=dev",
     "build:local": "npm run clean && export NODE_ENV=local && npm-run-all build:local:*",
-    "build:local:client": "webpack --watch --config ./webpack.config.js --env=local --progress --debug --colors --display-reasons --verbose --display-chunks",
-    "build:local:server": "webpack --config ./webpack.server.config.js --env=local --progress --debug --colors --display-reasons --verbose --display-chunks",
+    "build:local:server": "webpack --config ./webpack.server.config.js --env=local",
+    "build:local:client": "webpack-dev-server --hot --inline --watch --config ./webpack.config.js --env=local --colors",
     "build:doc": "documentation build src/*.js* -o public -f html",
     "test": "export NODE_ENV=test && jest --no-cache",
     "test:watch": "export NODE_ENV=test && jest --no-cache --watch",
@@ -52,7 +52,7 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "@plasma-platform/plasma-quark": "^3.0.30",
+    "@plasma-platform/plasma-quark": "^3.0.34",
     "@plasma-platform/quark-library": "0.1.78",
     "@plasma-platform/tm-css": "^1.0.10",
     "@plasma-platform/tm-message-hook": "^2.0.11",
